New component: react-bootstrap

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/msenyk/SFPermissionViewer#readme",
   "dependencies": {
     "react": "^15.1.0",
+    "react-bootstrap": "^0.29.4",
     "react-dom": "^15.1.0",
     "react-router": "^2.4.1"
   },
