--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "http-server": "^0.9.0",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
